Changelog of flooding
===================================================


1.1.5 (unreleased)
------------------

- Nothing changed yet.


1.1.4 (2012-04-24)
------------------

- Nothing changed yet.


1.1.3 (2012-03-27)
------------------

- Nothing changed yet.


1.1.2 (2012-03-07)
------------------

- pinned new versino of lizard-flooding (1.17), solved a bug during saving


1.1.1 (2012-03-06)
------------------

- Correct SYMBOLS_DIR, GISDATA settings.


1.1 (2012-03-02)
----------------

- pinned new version of lizard-flooding (1.16)

- added new var directory for generated icons

- changed mount dirs in settings.py


1.0.6 (2012-03-01)
------------------

- removed a lot of unused files form weblib

- added django debug bar

- removed CSRF middleware

- pinned new version of lizard-flooding (1.15)


1.0.5 (2012-03-01)
------------------

- Nothing changed yet.


1.0.4 (2012-03-01)
------------------

- Changed production database settings. Removed apache config files.


1.0.3 (2012-03-01)
------------------

- Increased django-staticfiles version trying to get it to work.


1.0.2 (2012-03-01)
------------------

- Changed path to external data share.


1.0.1 (2012-03-01)
------------------

- Fixed staging settings.


1.0 (2012-03-01)
----------------

- Lots of changes for the move to Amsterdam, new buildouts


0.14 (2011-05-25)
-----------------

- Nothing changed yet.


0.13 (2011-05-06)
-----------------

- Nothing changed yet.


0.12 (2011-05-06)
-----------------

- Nothing changed yet.


0.11 (2011-04-18)
-----------------

- Nothing changed yet.


0.10 (2011-03-25)
-----------------

- Nothing changed yet.


0.9 (2011-03-23)
----------------

- Nothing changed yet.


0.8 (2011-03-03)
----------------

- Nothing changed yet.


0.7 (2011-02-08)
----------------

- Nothing changed yet.


0.6 (2011-02-07)
----------------

- Nothing changed yet.


0.5 (2011-02-01)
----------------

- Including a couple of fixes to the setup from production.

