@@ -49,7 +49,7 @@ GDAL = 1.7.3
 iso8601 = 0.1.4
 iw.recipe.cmd = 0.3
 lizard-base =
-lizard-flooding = 1.19
+lizard-flooding = 1.20
 lizard-flooding-worker =
 meld3 = 0.6.7
 nens = 1.5 #check!
