@@ -17,6 +17,11 @@ server {
        expires 24h;
     }
 
+    location /download_result/ {
+       internal;
+       alias /mnt/flooding/Flooding/resultaten/ ;
+    }
+
     location / {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $http_host;
